# vibeogame

./: .gitignore  ANDROID_CONTROLS.md  ANDROID_PORT.md  ANDROID_QUICKSTART.md  CMakeLists.txt  CROSS_COMPILE.md  README.md  TODO.md  build-all-plats.sh  toolchain-mingw64.cmake
android/: AndroidManifest.xml  README.md  build-android.sh
src/: main.cpp
